# zk-rnd

./: .gitignore  Cargo.toml  README.md
dex/: Cargo.toml
dex/src/: handler.rs
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/guest/src/interface/: mod.rs  zk.rs
zk-sdk/: Cargo.toml
zk-sdk/src/: actions.rs  interface.rs  lib.rs  zk.rs
