[package]
name = "dex"
version = "0.1.0"
edition = "2021"

[dependencies]
zk-sdk = { path = "../zk-sdk", default-features = false }
serde = { version = "1.0", default-features = false }
borsh = { version = "0.10.3", default-features = false }
spot = { path = "../../zk-near-dex/spot/contract", features = ["no-contract", "zk"] }
types = { path = "../../zk-near-dex/core/types" }
marketplace = { path = "../../zk-near-dex/marketplace" }
order_book = { path = "../../zk-near-dex/components/order_book" }
platform = { path = "../../zk-near-dex/core/platform", features = ["zk"] }
spin = "0.9.8"
