[package]
name = "guest_method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
zk-sdk = { path = "../../zk-sdk", default-features = false }
dex = { path = "../../dex", default-features = false }
risc0-zkvm = { version = "0.15.0", default-features = false }
#risc0-zkvm = { version = "0.15.0", features = [ "std" ] }
borsh = { version = "0.10.3", default-features = false }
